<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, ArithActivity!</string>
    <string name="app_name">Arith</string>
     <string name="Tit">Arithmetic operation</string>
      <string name="fn">FristNumber</string>
       <string name="ln">SecondNumber</string>
        <string name="b">+</string>
        <string name="b2">-</string>
        <string name="b3">*</string>
        <style name="green" parent="@android:style/Widget.TextView">
            <item name="android:textStyle">bold</item>
            <item name="android:textColor">#ff1f74</item>
        </style>
         <style name="s1" parent="@android:style/Widget.TextView">
            <item name="android:textStyle">bold|italic</item>
              <item name="android:textColor">#61d089</item>         
        </style>
        <style name="s2" parent="@android:style/Widget.TextView">
            <item name="android:textStyle">italic</item>
              <item name="android:textColor">#015ddf</item>         
        </style>
        <color name="bg">#f498ad</color>
        <color name="but">#b0bf1a</color>
        
</resources>