<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg"
     >

    <TextView
        android:id="@+id/h"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Tit"
        android:textSize="30dp"
        android:layout_marginTop="10dp"
        style="@style/s2"
        />
      <TextView
                  android:id="@+id/t1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/fn"
        android:textSize="15dp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/h"
         style="@style/s1"
        />
	    <TextView
                  android:id="@+id/t2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ln"
        android:textSize="15dp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/t1"
        style="@style/s1"
        />
     <Button
          android:id="@+id/b"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@+id/t2"
          android:layout_marginTop="40dp"
          android:text="@string/b"
           android:background="@color/but"
          style="@style/s2"
         />
      <Button
          android:id="@+id/b2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@+id/t2"
          android:layout_marginTop="40dp"
	    android:layout_marginLeft="10dp"
	    android:layout_toRightOf="@+id/b"
          android:text="@string/b2"
           android:background="@color/but"
          style="@style/s2"
         />
       <Button
          android:id="@+id/b3"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@+id/t2"
          android:layout_marginTop="40dp"
           android:layout_marginLeft="10dp"
	    android:layout_toRightOf="@+id/b2"
          android:text="@string/b3"
              android:background="@color/but"
          style="@style/s2"
         />
      <TextView
          android:id="@+id/t3"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@+id/b"
          android:layout_marginTop="40dp"
          style="@style/green"
         />

      <EditText
          android:id="@+id/editText1"
          android:layout_width="200dp"
          android:layout_height="wrap_content"
          android:layout_alignTop="@+id/t1"
          android:layout_marginLeft="30dp"
          android:layout_toRightOf="@+id/b" 
			style="@style/green"
           />


      <EditText
          android:id="@+id/editText2"
          android:layout_width="200dp"
          android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
          android:layout_alignLeft="@+id/editText1"
          android:layout_alignTop="@+id/t2"
			style="@style/green" />

</RelativeLayout>